# SWUpdateGUI

./: .gitlab-ci.yml  CMakeLists.txt  README.md  main.c  mouse_cursor_icon.c  rec-drv-keypad.c  rec-drv-keypad.h  rec-lvgl-custom-tick.c  rec-lvgl-init.c  rec-lvgl-init.h  rec-progress-mq.c  rec-progress-mq.h  rec-screen-common.c  rec-screen-common.h  rec-screen-file-browser.c  rec-screen-file-browser.h  rec-screen-main.c  rec-screen-main.h  rec-screen-network-setup.c  rec-screen-network-setup.h  rec-screen-progress.c  rec-screen-progress.h  rec-styles.c  rec-styles.h  rec-swupdate-client.c  rec-swupdate-client.h  rec-util-config.c  rec-util-config.h  rec-util-files.c  rec-util-files.h  rec-util-linked-list.c  rec-util-linked-list.h  rec-util-networking.c  rec-util-networking.h  rec-util-system.c  rec-util-system.h
config/: config.txt
doc/: recovery-gui.md
scripts/: recovery-check-bridge-interface.sh  recovery-edit-default-gateway.sh  recovery-get-dhcp-status.sh  recovery-set-dhcp.sh  recovery-set-static.sh
unittests/: CMakeLists.txt  test-rec-util-config.cpp  test-rec-util-files.cpp  test-rec-util-linked-list.cpp  test-rec-util-networking.cpp  test-rec-util-sytem.cpp
